# penpctoollibs

./: .gitignore  README.md
evaluationwrapper/: CMakeLists.txt  build.sh  charevaluationwrapper.cpp  charevaluationwrapper.h  evaluationserializer.cpp  evaluationserializer.h  evaluationwrapper_global.h
handwrittenwrapper/: CMakeLists.txt  build.sh  handwrittenwrapper.cpp  handwrittenwrapper.h  handwrittenwrapper_global.h
portlib/: CMakeLists.txt  README.md  build.sh  httpconfig.cpp  httpconfig.h  platformport.cpp  platformport.h  portlib_global.h
